jenkins_install/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins-service
  annotations:
     service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
     service.beta.kubernetes.io/aws-load-balancer-internal: "false"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app.kubernetes.io/name: jenkins
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: manager
  - port: 50000
    targetPort: 50000
    protocol: TCP
    name: agent
